if it stops, we can kill it. have to use subprocess not threading though

--- a/launch_msgs/CMakeLists.txt
+++ b/launch_msgs/CMakeLists.txt
@@ -7,20 +7,20 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(rosidl_default_generators REQUIRED
+find_package(rosidl_default_generators REQUIRED)
 
 # Grab all message files 
 file(GLOB msg_sources RELATIVE ${PROJECT_SOURCE_DIR} msg/*.msg)
 file(GLOB srv_sources RELATIVE ${PROJECT_SOURCE_DIR} srv/*.srv)
-#message("Grabbing messages ${msg_sources}")
+message("Grabbing messages ${msg_sources}")
 
 #generate messages
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${msg_sources}
   ${srv_sources}
-  DEPENDENCIES geometry_msgs std_msgs sensor_msgs trajectory_msgs
 )
-ament_export_dependencies(rosidl_default_runtime))
+
+ament_export_dependencies(rosidl_default_runtime)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
